--- a/data/index.html
+++ b/data/index.html
@@ -2840,17 +2840,19 @@
                 byId('color').value = jr.channel[channel].color;
                 byId('sensor').value = jr.channel[channel].typ;
                 switch(jr.channel[channel].alarm) {
-					case '0':
-						break;
-					case '1':
+					case 0:
 						byId('pushalarm').checked = false;
 						byId('hwalarm').checked = false;
 						break;
-					case '2':				
+					case 1:
 						byId('pushalarm').checked = false;
 						byId('hwalarm').checked = true;
 						break;
-					case '3':
+					case 2:				
+						byId('pushalarm').checked = true;
+						byId('hwalarm').checked = false;
+						break;
+					case 3:
 						byId('pushalarm').checked = true;
 						byId('hwalarm').checked = true;
 						break;
